@@ -1,7 +1,5 @@
 package com.netgrif.application.engine.petrinet.service;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.type.TypeFactory;
 import com.netgrif.application.engine.objects.auth.domain.ActorTransformer;
 import com.netgrif.application.engine.configuration.properties.CacheConfigurationProperties;
 import com.netgrif.application.engine.files.minio.StorageConfigurationProperties;
@@ -138,6 +136,15 @@ public class PetriNetService implements IPetriNetService {
         requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetByIdentifier()), cacheProperties.getPetriNetByIdentifier()).clear();
     }
 
+    @Override
+    public void evictCache(String id, String identifier, String version) {
+        requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetById()), cacheProperties.getPetriNetById()).evict(id);
+        requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetDefault()), cacheProperties.getPetriNetDefault()).evict(identifier);
+        requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetLatest()), cacheProperties.getPetriNetLatest()).evict(identifier);
+        requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetCache()), cacheProperties.getPetriNetCache()).evict(new ObjectId(id));
+        requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetByIdentifier()), cacheProperties.getPetriNetByIdentifier()).evict(identifier + version);
+    }
+
     public void evictCache(PetriNet net) {
         requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetById()), cacheProperties.getPetriNetById()).evict(net.getStringId());
         requireNonNull(cacheManager.getCache(cacheProperties.getPetriNetDefault()), cacheProperties.getPetriNetDefault()).evict(net.getIdentifier());
@@ -150,7 +157,7 @@ public class PetriNetService implements IPetriNetService {
      * Get read only Petri net.
      */
     @Override
-    @Cacheable(value = "petriNetCache")
+    @Cacheable(value = "petriNetCache", unless = "#result == null")
     public PetriNet get(ObjectId petriNetId) {
         Optional<PetriNet> optional = repository.findById(petriNetId.toString());
         if (optional.isEmpty()) {
@@ -301,7 +308,7 @@ public class PetriNetService implements IPetriNetService {
     }
 
     @Override
-    @Cacheable(value = "petriNetById")
+    @Cacheable(value = "petriNetById", unless = "#result == null")
     public PetriNet getPetriNet(String id) {
         Optional<PetriNet> net = repository.findById(id);
         if (net.isEmpty()) {
@@ -374,20 +381,27 @@ public class PetriNetService implements IPetriNetService {
      */
     @Override
     public List<String> getExistingPetriNetIdentifiersFromIdentifiersList(List<String> identifiers) {
-        Aggregation agg = Aggregation.newAggregation(
+        if (identifiers == null || identifiers.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        Aggregation aggregation = Aggregation.newAggregation(
                 Aggregation.match(Criteria.where("identifier").in(identifiers)),
                 Aggregation.group("identifier"),
-                Aggregation.project("identifier").and("identifier").previousOperation()
-        );
-        AggregationResults<?> groupResults = mongoTemplate.aggregate(
-                agg,
-                com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class,
-                TypeFactory.defaultInstance().constructType(new TypeReference<Map<String, String>>() {
-                }).getRawClass()
+                Aggregation.project()
+                        .and("_id").as("identifier")
         );
 
-        List<Map<String, String>> result = (List<Map<String, String>>) groupResults.getMappedResults();
-        return result.stream().flatMap(v -> v.values().stream()).collect(Collectors.toList());
+        AggregationResults<Document> results = mongoTemplate.aggregate(
+                aggregation,
+                com.netgrif.application.engine.adapter.spring.petrinet.domain.PetriNet.class,
+                Document.class
+        );
+
+        return results.getMappedResults().stream()
+                .map(document -> document.getString("identifier"))
+                .filter(Objects::nonNull)
+                .toList();
     }
 
     @Override
